--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hansdev",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@8.6.12",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
