--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/three": "^0.169.0",
+    "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "react-scroll-parallax": "^3.4.5",
+    "three": "^0.169.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "typescript": "^5"
   }
 }
