--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-scroll-parallax": "^3.4.5",
+    "sonner": "^1.5.0",
     "three": "^0.169.0"
   },
   "devDependencies": {
