--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.114.3",
+    "@react-three/fiber": "^8.17.10",
     "@types/three": "^0.169.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
-    "react-scroll-parallax": "^3.4.5",
     "sonner": "^1.5.0",
     "three": "^0.169.0"
   },
